--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Run Postman Collection
       run: |
-        newman run tests/EloDrinksBackend Collection Tests.postman_collection.json \
+        newman run tests/EloDrinksBackend_Collection_Tests.postman_collection.json \
           -e tests/prod.postman_environment.json \
           --delay-request 100 \
           --reporters cli,json \
