--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,18 @@
 {
   "version": 2,
-  "builds": [{ "src": "/api/api.py", "use": "@vercel/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "api/api.py" }]
+  "builds": [
+    {
+      "src": "api/main.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/main.py"
+    }
+  ],
+  "env": {
+    "PYTHONUNBUFFERED": "1"
+  }
 }
