--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/main.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/main.py"
-    }
-  ],
-  "env": {
-    "PYTHONUNBUFFERED": "1"
-  }
+  "builds": [{ "src": "/api/api.py", "use": "@vercel/python" }],
+  "routes": [{ "src": "/(.*)", "dest": "api/api.py" }]
 }
