--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
   "builds": [{ "src": "/api/api.py", "use": "@vercel/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "api/api.py" }]
+  "routes": [{ "src": "/(.*)", "dest": "api/api.py" }],
+  "env": {
+    "PYTHONUNBUFFERED": "1"
+  }
 }
