--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Wait for FastAPI to be ready
         run: |
           sudo apt-get update
-          sudo apt-get install -y netcat
+          sudo apt-get install -y netcat-openbsd
           for i in {1..30}; do
             nc -z localhost 8000 && echo "API is up!" && break
             echo "Waiting for API..."
