--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -46,17 +46,18 @@ jobs:
           echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" >> $GITHUB_ENV
           echo "APP_HOST=http://localhost:8000/" >> $GITHUB_ENV
 
-      - name: Start Docker containers (FastAPI + DBs)
-        run: |
-          docker compose up -d
+      - name: Start API with Makefile
+        run: make docker
 
       - name: Wait for FastAPI to be ready
         run: |
+          sudo apt-get update && sudo apt-get install -y curl
           for i in {1..30}; do
-            curl -s http://localhost:8000/docs > /dev/null && echo "API is up!" && break
-            echo "Waiting for API..."
+            curl -s http://localhost:8000/docs > /dev/null && echo "✅ API is up!" && exit 0
+            echo "⏳ Esperando a API subir... Tentativa $i"
             sleep 2
           done
+          echo "❌ A API não respondeu em até 60s" && exit 1
 
       - name: Install Newman with HTML reporter
         run: npm install -g newman newman-reporter-html
